Wrap added to avoid nav sliding off screen

--- a/common_style.css
+++ b/common_style.css
@@ -31,6 +31,7 @@ nav {
 
 .home-ul {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
 }
